--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
     font-family: "zentry";
     src: url("/fonts/zentry-regular.woff2") format("woff2");
   }
+
+  .font-roboto-flex {
+    font-family: "Roboto Flex", sans-serif;
+  }
 }
 
 @layer utilities {
