--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ body {
   }
 
   .about-image {
-    @apply absolute left-1/2 top-1/2 z-20 h-[60vh] w-96 origin-center -translate-x-1/2 -translate-y-1/2 overflow-hidden rounded-3xl md:w-[30vw];
+    @apply absolute left-1/2 top-0 z-20 h-[60vh] w-96 origin-center -translate-x-1/2 overflow-hidden rounded-3xl md:w-[30vw];
   }
 
   .animated-title {
